--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
         El ambiente acogedor de nuestra tienda invita a clientes de todas las edades a disfrutar de momentos dulces y memorables. Ya sea que desees un cucurucho para llevar mientras paseas por la ciudad o prefieras relajarte en nuestro cómodo espacio, "Los Más Sabrosos" es el lugar perfecto para satisfacer tus antojos helados.
         Además de helados, ofrecemos una selección de deliciosos postres helados, batidos y opciones sin azúcar para adaptarnos a diferentes gustos y necesidades. Nuestro personal amable y apasionado está siempre listo para ayudarte a encontrar el helado perfecto para cada ocasión.
         Ven y descubre por qué somos conocidos como "Los Más Sabrosos". ¡Te esperamos para ofrecerte momentos inolvidables de indulgencia helada!</p>
+
+    <h2>Proposito de la aplicación</h2>
+    <p>Realizar una compra de los productos que se listan, pidiendo el producto y cantidad para luego listarlos, mostrando la suma de PxQ y suma total 
+        de la compra</p>
 </body>
 </html>
